packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union_arr64.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): false[] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): boolean[] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = Array<false>;
```

```ts
type New = Array<boolean>;
```

Old clients will not support this response:

```json
[
  true
]
```
