packages/beff-core/tests/snapshots/safe_to_change__tests__fail_disc_union_arr7.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): ["a1",] |["a2", {a:string[]}] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): ["a1",]|["a2", {a?:string[]}] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = (["a1"] | ["a2", {
        "a": Array<string>;
    }]);
```

```ts
type New = (["a1"] | ["a2", {
        "a"?: Array<string>;
    }]);
```

```ts
type Diff = ((["a1"] & (Not<["a1"]> & Not<["a2", {
        "a": Array<string>;
    }]>)) | ((["a2", {
        "a"?: Array<string>;
    }] & (Not<["a1"]> & Not<["a2", {
        "a": Array<string>;
    }]>)) & Not<["a1"]>));
```

```ts
type Evidence = [("a2"), {
        "a": undefined;
    }];
```

Previous clients will not support this potential response:

evidence:

```json
[
  "a2",
  {}
]
```
