packages/beff-core/tests/snapshots/safe_to_change__tests__fail_mapping_diff.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {a:string, b: boolean} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {a:string, b?: boolean} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = {
    "a": string;
    "b": boolean;
};
```

```ts
type New = {
    "a": string;
    "b"?: boolean;
};
```

Previous clients will not support this response:

```json
{
  "a": "abc"
}
```
