packages/beff-core/tests/snapshots/safe_to_change__tests__fail_min_3.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {a:string} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: ():  {a?:string} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = {
    "a": string;
};
```

```ts
type New = {
    "a"?: string;
};
```

Old clients will not support this response:

```json
{}
```
