packages/beff-core/tests/snapshots/safe_to_change__tests__fail_num21.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): [555,555] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): [number,number] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = [555, 555];
```

```ts
type New = [number, number];
```

Old clients will not support this response:

```json
[
  4773992856,
  123
]
```
