packages/beff-core/tests/snapshots/safe_to_change__tests__fail_num3.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): 555[] => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): number[] => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = Array<555>;
```

```ts
type New = Array<number>;
```

Old clients will not support this response:

```json
[
  4773992856
]
```
