packages/beff-core/tests/snapshots/safe_to_change__tests__fail_num4.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        export default {
            "/hello": {
                get: (): {a: 555} => todo()
            }
        }
        
to:

        export default {
            "/hello": {
                get: (): {a: number} => todo()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = {
    "a": 555;
};
```

```ts
type New = {
    "a": number;
};
```

```ts
type Diff = ({
    "a": number;
} & Not<{
    "a": 555;
}>);
```

Previous clients will not support this potential response:

evidence:

```js
{
    "a": 4773992856
};
```
