packages/beff-core/tests/snapshots/safe_to_change__tests__fail_obj_add_key.snap
---
source: packages/beff-core/tests/safe_to_change.rs
expression: "print_errors(from, to, &errors)"
---
from:

        type A = {
            a: 1,
            b: 2
        }
        export default {
            "/hello": {
                get: (): A => impl()
            }
        }
        
to:

        type B = {
            a: 1,
        }
        export default {
            "/hello": {
                get: (): B => impl()
            }
        }
        

# Error at GET /hello:

Response body is not compatible.

```ts
type Old = { "a": 1; "b": 2 };
```

```ts
type New = { "a": 1 };
```

Old clients will not support this response:

```json
{
  "a": 1,
  "b": "abc"
}
```
